# SpaceHunter

./: CMakeLists.txt  README.md
SDL2/i686-w64-mingw32/include/SDL2/: SDL_hints.h
SDL2/i686-w64-mingw32/lib/cmake/SDL2_image/: sdl2_image-config.cmake
SDL2/i686-w64-mingw32/lib/cmake/SDL2_mixer/: sdl2_mixer-config.cmake
SDL2/i686-w64-mingw32/lib/cmake/SDL2_ttf/: sdl2_ttf-config.cmake
SDL2/x86_64-w64-mingw32/lib/cmake/SDL2_image/: sdl2_image-config.cmake
SDL2/x86_64-w64-mingw32/lib/cmake/SDL2_ttf/: sdl2_ttf-config.cmake
scripts/: main.cpp
scripts/Background/: Background.cpp  Background.hpp
scripts/Enemy/: DoomShip.cpp  DoomShip.hpp  Enemy.cpp  Enemy.hpp  Meteor.cpp  Meteor.hpp  Ship.cpp  Ship.hpp
scripts/Menu/: Menu.cpp  Menu.hpp
scripts/Player/: Bullet.cpp  Bullet.hpp  Player.cpp  Player.hpp
scripts/Utilities/: Character.cpp  Character.hpp  GameManager.cpp  GameManager.hpp  SDL_Wrapper.cpp  SDL_Wrapper.hpp
